--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,41 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ably/ably-php": "^1.1",
+        "brianium/paratest": "^6.4",
+        "doctrine/dbal": "^3.3",
+        "doctrine/orm": "^2.12",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
         "laravel/jetstream": "^2.8",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.5"
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "league/flysystem-ftp": "^3.0",
+        "league/flysystem-sftp-v3": "^3.0",
+        "livewire/livewire": "^2.5",
+        "nyholm/psr7": "^1.5",
+        "orchestra/testbench": "^7.5",
+        "pda/pheanstalk": "^4.0",
+        "pusher/pusher-php-server": "^7.0",
+        "symfony/cache": "^6.0",
+        "symfony/filesystem": "^6.0",
+        "symfony/http-client": "^6.0",
+        "symfony/mailgun-mailer": "^6.0",
+        "symfony/postmark-mailer": "^6.0",
+        "symfony/psr-http-message-bridge": "^2.1",
+        "symfony/yaml": "^6.0"
     },
     "require-dev": {
+        "canvural/larastan-strict-rules": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
+        "nunomaduro/larastan": "^2.0",
+        "pestphp/pest": "^1.21",
+        "pestphp/pest-plugin-laravel": "^1.2",
+        "pestphp/pest-plugin-livewire": "^1.0",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0"
     },
@@ -56,7 +79,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
