--- a/package.json
+++ b/package.json
@@ -10,14 +10,26 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@alpinejs/collapse": "^3.10.2",
+        "@alpinejs/focus": "^3.10.2",
+        "@alpinejs/intersect": "^3.10.2",
+        "@alpinejs/mask": "^3.10.2",
+        "@alpinejs/morph": "^3.10.2",
+        "@alpinejs/persist": "^3.10.2",
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.0",
         "alpinejs": "^3.0.6",
         "axios": "^0.25",
+        "eslint": "^8.15.0",
+        "eslint-config-prettier": "^8.5.0",
+        "laravel-echo": "^1.11.7",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.1",
+        "prettier": "^2.6.2",
+        "prettier-plugin-tailwindcss": "^0.1.10",
+        "pusher-js": "^7.1.0-beta",
         "tailwindcss": "^3.0.0"
     }
 }
