--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "orchestra/testbench": "^7.5",
         "pda/pheanstalk": "^4.0",
         "pusher/pusher-php-server": "^7.0",
+        "spatie/laravel-permission": "^5.5",
         "symfony/cache": "^6.0",
         "symfony/filesystem": "^6.0",
         "symfony/http-client": "^6.0",
